2008-05-05  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Adam Roben.

        - fix test failure due to Windows' preference for Mac results over
          generic results

        * platform/win/editing/selection/move-left-right-expected.txt: Copied from LayoutTests/editing/selection/move-left-right-expected.txt.

2008-05-05  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - test, updated test and updated results for https://bugs.webkit.org/show_bug.cgi?id=18809
          Forms with block level generated content and absolutely positioned labels break inline layout (fixed on reflow)

        * fast/block/basic/adding-near-anonymous-block.html: Added.
        * media/video-controls-rendering.html: Changed to work around
        https://bugs.webkit.org/show_bug.cgi?id=18857 which now affects this
        test in its original form.
        * platform/mac/css1/box_properties/clear-expected.txt:
        * platform/mac/fast/block/basic/adding-near-anonymous-block-expected.checksum: Added.
        * platform/mac/fast/block/basic/adding-near-anonymous-block-expected.png: Added.
        * platform/mac/fast/block/basic/adding-near-anonymous-block-expected.txt: Added.
        * platform/mac/fast/forms/input-align-image-expected.txt:
        * platform/mac/media/audio-controls-rendering-expected.txt:
        * platform/mac/media/video-controls-rendering-expected.txt:
        * platform/mac/tables/mozilla/bugs/bug51140-expected.txt:

2008-05-02  Antti Koivisto  <antti@apple.com>

        Reviewed by Mitz.
        
        Test for <rdar://problem/5840475>
        CrashTracer: [USER] 2 crashes in Safari at com.apple.WebCore: WebCore::RenderBlock::insertPositionedObject

        * fast/transforms/container-transform-crash-expected.txt: Added.
        * fast/transforms/container-transform-crash.html: Added.

2008-05-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.
