@@ -1,0 +1,14 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+<head>
+<link rel="stylesheet" href="../js/resources/js-test-style.css">
+<script src="../js/resources/js-test-pre.js"></script>
+</head>
+<body>
+<p id="description"></p>
+<div id="console"></div>
+<canvas id="canvas" width="200" height="200"></canvas>
+<script src="canvas-alphaImageData-behavior.js"></script>
+<script src="../js/resources/js-test-post.js"></script>
+</body>
+</html>
